changed jpa with mongo, added rental
