# api/src/main/resources/public/api.yaml
@@ -23,13 +23,11 @@ security:
 paths:
   # The endpoints for the rental resource
   /rental:
-
-    # Get all rentals
     get:
       tags:
         - rental
-      summary: get rentals
-      description: returns a list of all the rentals, without any filtering
+      summary: get all rentals details
+      description: returns a list of all rentals, without any filtering
       operationId: getRentals
       responses:
         '200':
@@ -39,22 +37,22 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/RentalDTO'
+                  $ref: '#/components/schemas/RentalResponseDTO'
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
           $ref: '#/components/responses/Unauthorized'
         '404':
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/ServerError'
-
-    # Add a new rental
     post:
       tags:
         - rental
       summary: add a new rental
-      description: adds a new rental and returns its id
+      description: add a new rental and returns it
       operationId: addRental
       requestBody:
         description: The data of the rental to insert.
@@ -63,13 +61,6 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/RentalDTO'
-            example:
-              user:
-                id: 1
-              car:
-                id: 1
-              startDate: '2020-01-01T12:00:00.000-00:00'
-              endDate: '2020-01-02T14:00:00.000-00:00'
       responses:
         '201':
           $ref: '#/components/responses/Created'
@@ -77,19 +68,110 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '401':
           $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
+  /rental/{id}:
+    get:
+      tags:
+        - rental
+      summary: get a rental
+      description: return the details for a rental, based on id
+      operationId: getRental
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RentalResponseDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/ServerError'
+    patch:
+      tags:
+        - rental
+      summary: update rental
+      description: update rental
+      operationId: updateRental
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      requestBody:
+        $ref: '#/components/requestBodies/PatchBody'
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RentalDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/ServerError'
+    delete:
+      tags:
+        - rental
+      summary: remove a rental
+      description: delete a rental identified by id
+      operationId: cancelRental
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: success
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/ServerError'
 
 components:
   responses:
     Created:
-      description: the id of the created entity
+      description: created with success
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/CreatedDTO'
     NotFound:
-      description: the results are either empty or couldn't be found
+      description: not found
     Unauthorized:
       description: unauthorized
     BadRequest:
@@ -106,7 +188,52 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/ErrorDTO'
+
+  requestBodies:
+    PatchBody:
+      description: A message in JsonPatch format
+      required: true
+      content:
+        application/json-patch+json:
+          schema:
+            $ref: '#/components/schemas/PatchBody'
+
   schemas:
+    CreatedDTO:
+      type: object
+      properties:
+        id:
+          type: string
+    PatchBody:
+      items:
+        $ref: '#/components/schemas/JsonPatchDTO'
+    JsonPatchDTO:
+      type: object
+      description: A JSONPatch document as defined by RFC 6902.
+      required:
+        - 'op'
+        - 'path'
+        - 'value'
+      properties:
+        op:
+          type: string
+          description: The operation to be performed
+          enum:
+            - 'add'
+            - 'remove'
+            - 'replace'
+            - 'move'
+            - 'copy'
+            - 'test'
+        path:
+          type: string
+          description: A JSON-Pointer
+        value:
+          type: object
+          description: The value to be used within the operations.
+        from:
+          type: string
+          description: A string containing a JSON Pointer value.
     ValidationDTO:
       type: object
       properties:
@@ -123,121 +250,125 @@ components:
           type: string
         message:
           type: string
-    RentalDTO:
+    UserDefaultObject:
       type: object
       properties:
-        id:
-          type: integer
-          format: int32
-          description: rental id
-        user:
-          $ref: '#/components/schemas/UserDTO'
-        car:
-          $ref: '#/components/schemas/CarDTO'
-        startDate:
+        email:
           type: string
-          format: date-time
-          description: the approximate time when the car is picked up
-        endDate:
-          type: string
-          format: date-time
-          description: the approximate time when the car is returned
-        status:
-          $ref: '#/components/schemas/RentalStatus'
-    RentalStatus:
-      type: string
-      enum:
-        - ACTIVE
-        - CANCELLED
-
-    UserDTO:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int32
-          description: user id
+          description: email of the user
         username:
           type: string
-          example: vladcarcu
-        firstName:
+          description: username of the user
+        firstname:
           type: string
-          example: Vlad
-          description: the first name of the user
-        lastName:
+          description: first name of the user
+        lastname:
           type: string
-          example: Carcu
-          description: the last name of the user
-        driverLicense:
+          description: last name of the user
+        countryofresidence:
           type: string
-          example: BV123456
-          description: the serie and number of the user's driver's license
+          description: country of residence of the user
+        title:
+          type: string
+          description: title of the user
+        driverlicensenumber:
+          type: integer
+          format: int32
+          description: driver`s license number of the user
         status:
-          $ref: '#/components/schemas/UserStatus'
-    UserStatus:
-      type: string
-      enum:
-        - ACTIVE
-        - DELETED
-
+          type: string
+          enum: [ ACTIVE, CANCELLED ]
+          description: the status of the user
+    UserResponseDTO:
+      allOf:
+        - $ref: '#/components/schemas/UserDefaultObject'
+        - type: object
+          properties:
+            id:
+              type: string
+              description: id of the user
+    UserDTO:
+      allOf:
+        - $ref: '#/components/schemas/UserDefaultObject'
+        - type: object
+          properties:
+            password:
+              type: string
+              format: password
+              description: password of the user
     CarDTO:
       type: object
       properties:
-        id:
-          type: integer
-          format: int32
-          description: car id
         make:
           type: string
-          example: VW
-          description: the make of the car
+          description: make param
         model:
           type: string
-          example: Golf 7
-          description: the model of the car
+          description: model of the car
         year:
           type: integer
           format: int32
-          example: 2016
-          description: the year in which the car was built
+          description: year of manufacture of the car
         mileage:
           type: integer
           format: int32
-          example: 12350
-          description: the approximate mileage when the car is being picked up
+          description: car mileage
         fuel:
-          $ref: '#/components/schemas/FuelType'
-        carClass:
-          $ref: '#/components/schemas/CarClass'
+          type: string
+          description: type of fuel
+        carClazz:
+          type: string
         status:
-          $ref: '#/components/schemas/CarStatus'
-    FuelType:
-      type: string
-      enum:
-        - GAS
-        - DIESEL
-    CarClass:
-      type: string
-      enum:
-        - A-segment
-        - B-segment
-        - C-segment
-        - D-segment
-        - E-segment
-        - F-segment
-    CarStatus:
-      type: string
-      enum:
-        - ACTIVE
-        - DELETED
+          type: string
+          enum: [ACTIVE, CANCELLED]
+          description: the status of the car
 
-    CreatedDTO:
+    CarResponseDTO:
+      allOf:
+        - $ref: '#/components/schemas/CarDTO'
+        - type: object
+          properties:
+            id:
+              type: string
+              description: id car
+    RentalDefaultObject:
       type: object
       properties:
-        id:
-          type: integer
-          format: int32
-          description: the id of the created entity
+        startDate:
+          type: string
+          description: start date and time
+          example: "2020-11-14T12:30:00Z"
+        endDate:
+          type: string
+          description: end date and time
+          example: "2020-11-19T12:30:00Z"
+        status:
+          type: string
+          enum: [ ACTIVE, CANCELLED ]
+          description: the status of the
+    RentalDTO:
+      allOf:
+        - $ref: '#/components/schemas/RentalDefaultObject'
+        - type: object
+          properties:
+            user:
+              type: string
+              description: user id
+            car:
+              type: string
+              description: car id
+    RentalResponseDTO:
+      allOf:
+        - $ref: '#/components/schemas/RentalDefaultObject'
+        - type: object
+          properties:
+            id:
+              type: string
+              description: rent id
+            user:
+              $ref: '#/components/schemas/UserResponseDTO'
+            car:
+              $ref: '#/components/schemas/CarResponseDTO'
   securitySchemes:
     oAuth:
       type: oauth2
