# rental/src/main/java/ro/agilehub/javacourse/car/hire/rental/service/entity/Status.java
@@ -1,0 +1,5 @@
+package ro.agilehub.javacourse.car.hire.rental.service.entity;
+
+public enum Status {
+    ACTIVE, CANCELLED
+}
