# rental/src/main/java/ro/agilehub/javacourse/car/hire/rental/service/model/JsonPatch.java
@@ -1,0 +1,25 @@
+package ro.agilehub.javacourse.car.hire.rental.service.model;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+import lombok.*;
+
+
+@Data
+@EqualsAndHashCode(of = "id")
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+public class JsonPatch {
+
+    @JsonProperty("op")
+    private String op;
+
+    @JsonProperty("path")
+    private String path;
+
+    @JsonProperty("value")
+    private Object value;
+
+    @JsonProperty("from")
+    private String from;
+}
